Too large commit... First, fixed the final things with the dashboard, however the sunburst graphs are still hard coded. Second, added the functionallity of filter results by combinations of disabilities/diagnoses. This need to be validated, but at the moment it seems to work

--- a/client/app/app.css
+++ b/client/app/app.css
@@ -409,3 +409,6 @@ span.pointer{
   padding: .5em .5em;
 }
 
+span#filterText{
+  font-size: 1.5em;
+}
