--- a/client/app/directives/dashboardSunburst/dashboardSunburst.css
+++ b/client/app/directives/dashboardSunburst/dashboardSunburst.css
@@ -1,36 +1,16 @@
-#sidebar {
-  float: right;
-  width: 100px;
-}
 
-#sequence {
-  width: 600px;
-  height: 70px;
-}
 
-#sequence text, #legend text {
-  font-weight: 600;
-  fill: #fff;
-}
-
-#chart {
-  position: relative;
-}
-
-#chart path {
-  stroke: #fff;
-}
-
-#explanation {
+.explanation {
   position: absolute;
-  top: 260px;
-  left: 305px;
-  width: 140px;
+  top: 200px;
+  left: 155px;
+  width: 120px;
+  vertical-align: middle;
   text-align: center;
   color: #666;
   z-index: 10;
 }
 
-#valueInfo {
-  font-size: 2.5em;
+.valueInfo {
+  font-size: 1.5em;
 }
